# agent_search_engine

./: .gitignore  agent_graph.py  agents.py  chat_model.py  dispatcher.py  fallback.py  pyproject.toml  qdrant.py  register_agent.py  scratch.py  search_engine.py  supervisor.py  synthesizer.py  ui.py  views.py
src/common/: fallback.py  qdrant.py  types.py
src/controllers/: base_model.py  chat_model.py  search_engine.py
src/models/: models.py
src/nodes/: agent_graph.py  dispatcher.py  supervisor.py  synthesizer.py
src/register_service/: register_agent.py
src/repo/: agent_lookup.py  fallback.py  qdrant.py  register_agent.py
src/search_engine/: agent_graph.py  agent_lookup.py  dispatcher.py  engine.py  supervisor.py  synthesizer.py
src/store/: agents.json
src/ui/: agent_trace.py  new_ui.py  ui.py
src/views/: views.py
