[project]
name = "agent-search-engine"
version = "0.1.0"
description = ""
authors = [
    {name = "kenny Udekwu",email = "kennyudekwu@kennys-MacBook-Pro.local"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "qdrant-client (>=1.14.2,<2.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "rapidfuzz (>=3.13.0,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "langchain[community] (>=0.3.25,<0.4.0)",
    "langchain-core (>=0.3.63,<0.4.0)",
    "langgraph (>=0.4.7,<0.5.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "streamlit (>=1.45.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
