[tool.poetry]
name = "agent_search_engine"
version = "0.1.0"
description = ""
authors = ["kenny Udekwu <kennyudekwu@kennys-MacBook-Pro.local>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
qdrant-client = "^1.14.2"
sentence-transformers = "^4.1.0"
pydantic = "^2.11.5"
fastapi = "^0.115.12"
rapidfuzz = "^3.13.0"
httpx = "^0.28.1"
langchain = { version = "^0.3.25", extras = ["community"] }
langchain-core = "^0.3.63"
langgraph = "^0.4.7"
uvicorn = "^0.34.3"
streamlit = "^1.45.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
